# rust-wasm-microservice

./: Cargo.toml  Dockerfile  Dockerfile.wasm  README.md
src/: main.rs
