[package]
name = "rust-wasm-microservice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#hyper_wasi = { version = "0.15", features = ["full"]}
#tokio_wasi = { version = "1.21", features = ["rt", "macros", "net", "time", "io-util"]}
hyper = { version = "^0.14.25", features = ["full"]}
tokio = { version = "1.21", features = ["rt", "macros", "net", "time", "io-util"]}
json = "0.12"
derive_more = "0.99.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
assert-json-diff = "2.0.2"
hyper-body-to-bytes = "0.1.0"

